@@ -86,6 +86,7 @@ static struct fuse_operations hello_oper = {
     read:	hello_read,
     write:	NULL,
     statfs:	NULL,
+    release:	NULL
 };
 
 int main(int argc, char *argv[])
