@@ -89,6 +89,7 @@ static struct fuse_operations null_oper = {
     read:	null_read,
     write:	null_write,
     statfs:	null_statfs,
+    release:	NULL
 };
 
 int main(int argc, char *argv[])
